# vesuvius-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.c  example2.c  runtests.c  vescuvius.h  vesuvius-c.h
cmake/: FindBlosc2.cmake  FindJsonC.cmake
